@startuml

title __COMPETENCIESFORSTUDENTS's Class Diagram__\n

  namespace  {
    namespace om.example.competenciesForStudents {
      class com.example.competenciesForStudents.Charts {
          + createAreaChart()
          + createPieChart()
          + onAreaChart()
          + printChart()
          + showChart()
      }
    }
  }
  

  namespace  {
    namespace om.example.competenciesForStudents {
      interface com.example.competenciesForStudents.InterfaceDB {
          {abstract} + addStrDB()
          {abstract} + arrCount()
          {abstract} + arrDisc()
          {abstract} + countIndicator()
          {abstract} + deleteStrDB()
          {abstract} + getAllStrDB()
          {abstract} + updateStrDB()
      }
    }
  }
  

  namespace  {
    namespace om.example.competenciesForStudents {
      class com.example.competenciesForStudents.InterfaceDBImpliment {
          - conn : Connection
          - ps : PreparedStatement
          - rs : ResultSet
          - stmt : Statement
          + InterfaceDBImpliment()
          + addStrDB()
          + arrCount()
          + arrDisc()
          + countIndicator()
          + deleteStrDB()
          + getAllStrDB()
          + updateStrDB()
      }
    }
  }
  

  namespace  {
    namespace om.example.competenciesForStudents {
      class com.example.competenciesForStudents.MainController {
          + fieldCom : TextField
          + fieldDisc : TextField
          + fieldInd : TextField
          + tbl : TableView
          - col0 : TableColumn
          - col1 : TableColumn
          - col2 : TableColumn
          - col3 : TableColumn
          - columnValues : ArrayList<String>
          - competencies : String[]
          - count : ArrayList<Integer>
          - counterInd : ArrayList<Integer>
          - fxlist : ObservableList<StrDB>
          + initialize()
          + onDel()
          + onGraphics()
          + onSef()
          - createtable()
          - updateSorts()
          - updateTable()
      }
    }
  }
  

  namespace  {
    namespace om.example.competenciesForStudents {
      class com.example.competenciesForStudents.PrintCharts {
          - img : BufferedImage
          + PrintCharts()
          + print()
          + printing()
      }
    }
  }
  

  namespace  {
    namespace om.example.competenciesForStudents {
      class com.example.competenciesForStudents.StartProgram {
          {static} + main()
          + start()
      }
    }
  }
  

  namespace  {
    namespace om.example.competenciesForStudents {
      class com.example.competenciesForStudents.StrDB {
          - competence : SimpleStringProperty
          - discipline : SimpleStringProperty
          - id : SimpleIntegerProperty
          - indicator : SimpleStringProperty
          + StrDB()
          + getCompetence()
          + getDiscipline()
          + getId()
          + getIndicator()
          + setCompetence()
          + setDiscipline()
          + setIndicator()
      }
    }
  }
  

  com.example.competenciesForStudents.InterfaceDBImpliment .up.|> com.example.competenciesForStudents.InterfaceDB
  com.example.competenciesForStudents.MainController .up.|> javafx.fxml.Initializable
  com.example.competenciesForStudents.MainController o-- com.example.competenciesForStudents.InterfaceDB : interfaceDB
  com.example.competenciesForStudents.MainController o-- com.example.competenciesForStudents.StrDB : strDBAdd
  com.example.competenciesForStudents.PrintCharts .up.|> java.awt.print.Printable
  com.example.competenciesForStudents.StartProgram -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
